force-app/main/default/objects/Engagement_External_Team__c/Engagement_External_Team__c.object-meta.xml
<CustomObject>
    <description>Custom object to track client and external contacts for an engaged deal/project.</description>
    <label>Engagement Contact</label>
    <nameField>
        <displayFormat>EET-{000000}</displayFormat>
        <label>External Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>