force-app/main/default/objects/Engagement_External_Team__c/fields/Acknowledge_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acknowledge billing contact is correct.</description>
    <inlineHelpText>Acknowledge billing contact is correct.</inlineHelpText>
    <label>Acknowledge Billing Contact</label>
    <type>Checkbox</type>
</CustomField>