force-app/main/default/objects/Engagement_External_Team__c/fields/Company_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Billing_Country__c</fullName>
    <formula>Contact__r.Account.BillingCountry</formula>
    <label>Company Billing Country</label>
    <type>Text</type>
</CustomField>