force-app/main/default/objects/Engagement_External_Team__c/fields/CompanyId__c.field-meta.xml
<CustomField>
    <fullName>CompanyId__c</fullName>
    <formula>CASESAFEID(Contact__r.AccountId)</formula>
    <label>CompanyId</label>
    <type>Text</type>
</CustomField>