force-app/main/default/objects/Engagement_External_Team__c/fields/Contact_URL__c.field-meta.xml
<CustomField>
    <fullName>Contact_URL__c</fullName>
    <formula>&quot;/&quot; &amp; Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact URL</label>
    <type>Text</type>
</CustomField>