force-app/main/default/objects/Engagement_External_Team__c/fields/EET_UNIQUE__c.field-meta.xml
<CustomField>
    <fullName>EET_UNIQUE__c</fullName>
    <label>EET UNIQUE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>