force-app/main/default/objects/Engagement_External_Team__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipName>Engagement_Working_Groups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>