force-app/main/default/objects/Engagement_External_Team__c/fields/Engagement_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Client_Name__c</fullName>
    <formula>Engagement__r.Client__r.Name</formula>
    <label>Engagement Client Name</label>
    <type>Text</type>
</CustomField>