force-app/main/default/objects/Engagement_External_Team__c/fields/Engagement_Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Subject_Name__c</fullName>
    <formula>Engagement__r.Subject__r.Name</formula>
    <label>Engagement Subject Name</label>
    <type>Text</type>
</CustomField>