force-app/main/default/objects/Engagement_External_Team__c/fields/Equity_From_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Equity_From_Transaction__c</fullName>
    <label>Equity From Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>