force-app/main/default/objects/Engagement_External_Team__c/fields/Exclude_from_Working_Party__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Working_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Working Party?</label>
    <type>Checkbox</type>
</CustomField>