force-app/main/default/objects/Engagement_External_Team__c/fields/Exclude_from_Working_Party_Form__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Working_Party_Form__c</fullName>
    <formula>IF (Exclude_from_Working_Party__c,&quot;1&quot;,&quot;0&quot;)</formula>
    <label>Exclude_from_Working_Party_Form</label>
    <type>Text</type>
</CustomField>