force-app/main/default/objects/Engagement_External_Team__c/fields/Key_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>Key_External_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for FR Engagement Summary for FR LOB Post-Transaction  Tab</description>
    <inlineHelpText>This box should be checked if the contact should be contacted about post-transaction HL opportunities</inlineHelpText>
    <label>Key External Contact</label>
    <type>Checkbox</type>
</CustomField>