force-app/main/default/objects/Engagement_External_Team__c/fields/Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Name_Link__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName, &quot;&quot;, &apos;_parent&apos;) &amp; 
HYPERLINK(&quot;/&quot; &amp; Contact__r.Id, Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName ,&apos;_parent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>