force-app/main/default/objects/Engagement_External_Team__c/fields/Post_Transaction_Employment_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Post_Transaction_Employment_Agreement__c</fullName>
    <label>Post Transaction Employment Agreement</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>