force-app/main/default/objects/Engagement_External_Team__c/fields/Post_Transaction_New_Equity_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Post_Transaction_New_Equity_Ownership__c</fullName>
    <label>Post Transaction New Equity Ownership</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>