force-app/main/default/objects/Engagement_External_Team__c/fields/Post_Transaction_Options_Vested_On__c.field-meta.xml
<CustomField>
    <fullName>Post_Transaction_Options_Vested_On__c</fullName>
    <label>Post Transaction Options Vested On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Length Of Service</fullName>
            </value>
            <value>
                <fullName>Financial Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>