force-app/main/default/objects/Engagement_External_Team__c/fields/Post_Transaction_Rollover_Required__c.field-meta.xml
<CustomField>
    <fullName>Post_Transaction_Rollover_Required__c</fullName>
    <label>Post Transaction Rollover Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>