force-app/main/default/objects/Engagement_External_Team__c/fields/Post_Transaction_Title__c.field-meta.xml
<CustomField>
    <fullName>Post_Transaction_Title__c</fullName>
    <label>Post Transaction Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>