force-app/main/default/objects/Engagement_External_Team__c/fields/Post_Transaction_Total_Comp__c.field-meta.xml
<CustomField>
    <fullName>Post_Transaction_Total_Comp__c</fullName>
    <formula>BLANKVALUE( Post_Transaction_Salary__c +  Post_Transaction_Bonus__c ,0)</formula>
    <label>Post Transaction Total Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>