force-app/main/default/objects/Engagement_External_Team__c/fields/Pre_Transaction_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transaction_Bonus__c</fullName>
    <label>Pre Transaction Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>