force-app/main/default/objects/Engagement_External_Team__c/fields/Pre_Transaction_Employment_Length__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transaction_Employment_Length__c</fullName>
    <label>Pre Transaction Employment Length (Yrs)</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>