force-app/main/default/objects/Engagement_External_Team__c/fields/Pre_Transaction_Equity_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transaction_Equity_Ownership__c</fullName>
    <label>Pre Transaction Equity Ownership (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>