force-app/main/default/objects/Engagement_External_Team__c/fields/Pre_Transaction_Salary__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transaction_Salary__c</fullName>
    <label>Pre Transaction Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>