force-app/main/default/objects/Engagement_External_Team__c/fields/Pre_Transaction_Title__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transaction_Title__c</fullName>
    <label>Pre Transaction Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>