force-app/main/default/objects/Engagement_External_Team__c/fields/Pre_Transaction_Total_Comp__c.field-meta.xml
<CustomField>
    <fullName>Pre_Transaction_Total_Comp__c</fullName>
    <formula>BLANKVALUE( Pre_Transaction_Salary__c +  Pre_Transaction_Bonus__c , 0)</formula>
    <label>Pre Transaction Total Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>