force-app/main/default/objects/Engagement_External_Team__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>