force-app/main/default/objects/Engagement_External_Team__c/fields/Report_Primary__c.field-meta.xml
<CustomField>
    <fullName>Report_Primary__c</fullName>
    <formula>IF(Primary__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>Report Primary</label>
    <type>Text</type>
</CustomField>