force-app/main/default/objects/Engagement_External_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accountant to Company/Debtor</fullName>
            </value>
            <value>
                <fullName>Accountant to Official Creditors Committee</fullName>
            </value>
            <value>
                <fullName>Ad Hoc Noteholders Committee</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Adverse Party</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Attorney (Acquirer)</fullName>
            </value>
            <value>
                <fullName>Attorney (Target)</fullName>
            </value>
            <value>
                <fullName>Attorney Advising other Transaction Party</fullName>
            </value>
            <value>
                <fullName>Attorney to Adverse Party Board/Special Committee</fullName>
            </value>
            <value>
                <fullName>Attorney to Adverse Party Company</fullName>
            </value>
            <value>
                <fullName>Attorney to Board/Special Committee</fullName>
            </value>
            <value>
                <fullName>Attorney to Company</fullName>
            </value>
            <value>
                <fullName>Attorney to Houlihan Lokey</fullName>
            </value>
            <value>
                <fullName>Audit Partner</fullName>
            </value>
            <value>
                <fullName>Balloting/Solicitation Agent</fullName>
            </value>
            <value>
                <fullName>Banker Advising Acquirer</fullName>
            </value>
            <value>
                <fullName>Banker Advising other Transaction Party</fullName>
            </value>
            <value>
                <fullName>Banker Advising Target</fullName>
            </value>
            <value>
                <fullName>Bank Group</fullName>
            </value>
            <value>
                <fullName>Bank Group - First Lien</fullName>
            </value>
            <value>
                <fullName>Bank Group - Second Lien</fullName>
            </value>
            <value>
                <fullName>Bank Lender</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Clerk</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Counsel to Ad Hoc Noteholders Committee</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Counsel to Bank Group</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Counsel to Board of Directors</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Counsel to Company/Debtor</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Counsel to DIP Lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>