force-app/main/default/objects/Engagement_External_Team__c/fields/Sort_Role_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Role_Order__c</fullName>
    <defaultValue>&apos;00000&apos;</defaultValue>
    <description>Indicates the role sort order for the Working Group List
Note: This must be text to allow grouping/sorting easily - numeric fields cannot be grouped in SF</description>
    <label>Sort Role Order</label>
    <length>5</length>
    <type>Text</type>
</CustomField>