force-app/main/default/objects/Engagement_External_Team__c/fields/Sub_Role__c.field-meta.xml
<CustomField>
    <fullName>Sub_Role__c</fullName>
    <inlineHelpText>Applicable to FR only.</inlineHelpText>
    <label>Sub Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Role__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Potential Buyer</fullName>
            </value>
            <value>
                <fullName>Restricted Group</fullName>
            </value>
            <value>
                <fullName>Steering Committee</fullName>
            </value>
            <value>
                <fullName>Subcommittee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>