force-app/main/default/objects/Engagement_External_Team__c/fields/Total_Proceeds_At_Close__c.field-meta.xml
<CustomField>
    <fullName>Total_Proceeds_At_Close__c</fullName>
    <formula>Equity_From_Transaction__c + Transaction_Incentives_At_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Proceeds At Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>