force-app/main/default/objects/Engagement_External_Team__c/fields/Transaction_Incentives_At_Close__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Incentives_At_Close__c</fullName>
    <label>Transaction Incentives At Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>