force-app/main/default/objects/Engagement_External_Team__c/recordTypes/FAS.recordType-meta.xml
<RecordType>
    <fullName>FAS</fullName>
    <active>true</active>
    <label>FVA</label>
</RecordType>