force-app/main/default/objects/Engagement_External_Team__c/recordTypes/FR.recordType-meta.xml
<RecordType>
    <fullName>FR</fullName>
    <active>true</active>
    <label>FR</label>
</RecordType>