force-app/main/default/objects/Engagement_External_Team__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>true</active>
    <description>General Record Type Including All Picklist Values</description>
    <label>General</label>
</RecordType>