force-app/main/default/objects/Engagement_External_Team__c/recordTypes/Liaison.recordType-meta.xml
<RecordType>
    <fullName>Liaison</fullName>
    <active>true</active>
    <label>Liaison</label>
</RecordType>