force-app/main/default/objects/Engagement_External_Team__c/validationRules/HL_PrimaryContactEmailTitleCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>HL_PrimaryContactEmailTitleCheck</fullName>
    <active>true</active>
    <description>Related to DMND0023358:-
To check if Primary contact has Title and Email</description>
    <errorConditionFormula>((Primary__c &amp;&amp; (PRIORVALUE(Primary__c ) = false))  ||  (Billing_Contact__c &amp;&amp; (PRIORVALUE(Billing_Contact__c ) = false)) ) &amp;&amp;  
(ISBLANK(Contact__r.Email)  ||  ISBLANK( Contact__r.Title ) ) &amp;&amp;  
NOT( ISNEW() )</errorConditionFormula>
    <errorMessage>Please enter the title and email of the primary/billing contact.</errorMessage>
</ValidationRule>